# DillonAIPolyGlotDefender

./: .gitignore  Cargo.toml  Count.py  Detect.py  Install.bat  Register.bat  Register.ps1  dillons.uxf  sin
AITraining/TrainingTools/: GPU.py  Model-Types.txt  TrainD1-mini-0.py  TrainD1.py  TrainD2-mini.py  TrainD2.py  bad_file_anomaly_detector.h5  requirements.txt
AITraining/TrainingTools/D1/: EvalD1.py  TrainD1.py
AITraining/TrainingTools/D2/: D2-test.py  Detect.py  Detect.spec  Eval.py  TrainD2-2.py  (+5 more)
AITraining/scrape/: SortZips.py  count.sh  dataset-metadata.json  fix.py  github.py  kaggel.py  make2.py  mitraGlotMaker copy.py  mitraGlotMaker.py  movefiles.sh  remove.py  removefile.sh
Factory/: Cargo.toml
GUI/: Cargo.toml
GUI/src/: main.rs
MainProgram/: Cargo.toml
MainProgram/src/: lib.rs  main.rs
MainProgram/src/quarantine/: hash.rs  mod.rs  quarantine.rs  storage.rs  zip_encrypt.rs
MainProgram/src/scanners/: headersearch.rs
MainProgram/src/scanners/deepscanner/: extscanner.rs  xorscanner.rs
MainProgram/src/scrubber/: sanitizeFile.rs
RandomFiles/: D3-2-pre.rs
TestTools/: DOCX+JAR.docx  createpdf.py
libs/ai_lib/: Cargo.toml
libs/logging_lib/: Cargo.toml
libs/watcher-lib/: Cargo.toml
libs/watcher_lib/: Cargo.toml
libs/windows_lib/: Cargo.toml
scripts/: Build.sh  Build.txt  BuildInstructions.txt  Build_RPM.sh  Build_UBUNTU.sh  Dillonmay.rtf  InstallDMZ.ifp  Register.bat  Register.sh  RegisterRightClick.bat  Scan.bat  dilly_defender_installer.iss
src/: main.rs
src/scanners/: headersearch.rs  mod.rs
src/scrubber/: mod.rs
(+30 files in other folders)
