[package]
name = "dilly_defender"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"  
chrono = "0.4"
log = "0.4"
fern = "0.6"
lopdf = "0.35.0"
sha2 = "0.10"
zip = "0.6"
time = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.138"
tempfile = "3"
aes = "0.7"
block-modes = { version = "0.8", features = ["std"] }
block-padding = "0.3"
rand = "0.9.1"
hex = "0.4"

watcher_lib = { path = "../libs/watcher_lib" }
logging_lib = { path = "../libs/logging_lib" }
ai_lib = { path = "../libs/ai_lib" }

#[cfg(target_os = "windows")]
windows_lib = { path = "../libs/windows_lib" }
